feat: ✨ Swapped tool belt to be the gold backpack equivalent with pouches shifting one down. And added backpack contents snapshots and related command for easy tests.