@@ -1,6 +1,5 @@
 package net.p3pp3rf1y.sophisticatedbackpacksvh;
 
-import com.google.common.collect.ImmutableMap;
 import net.minecraft.core.Direction;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.phys.shapes.VoxelShape;
@@ -13,8 +12,18 @@ import java.util.Map;
 
 public class BackpackShapeProvider implements BackpackShapes.IShapeProvider {
 
-	private static final Map<Block, RotatedShapes> BACKPACK_SHAPES = ImmutableMap.of(
+	private static final Map<Block, RotatedShapes> BACKPACK_SHAPES = Map.of(
 			ModBlocks.BACKPACK.get(), new RotatedShapes(
+					Block.box(6, 0, 6, 10, 5, 9),
+					Block.box(7.5, 2.8, 8.4, 8.5, 3.8, 9.4)
+			),
+			ModBlocks.IRON_BACKPACK.get(), new RotatedShapes(
+					Block.box(3, 0, 6.5, 7, 6, 9.5),
+					Block.box(4.5, 3.8, 8.9, 5.5, 4.8, 9.9),
+					Block.box(10.5, 3.8, 8.9, 11.5, 4.8, 9.9),
+					Block.box(9, 0, 6.5, 13, 6, 9.5)
+			),
+			ModBlocks.GOLD_BACKPACK.get(), new RotatedShapes(
 					Block.box(4, 2, 6, 12, 4, 6),
 					Block.box(9.5, 0, 3.9, 12.5, 4, 5.9),
 					Block.box(3.5, 0, 3.9, 6.5, 4, 5.9),
@@ -23,16 +32,6 @@ public class BackpackShapeProvider implements BackpackShapes.IShapeProvider {
 					Block.box(12, 2, 6, 12, 4, 10),
 					Block.box(4, 2, 10, 12, 4, 10),
 					Block.box(4, 2, 6, 4, 4, 10)
-			),
-			ModBlocks.IRON_BACKPACK.get(), new RotatedShapes(
-					Block.box(6, 0, 6, 10, 5, 9),
-					Block.box(7.5, 2.8, 8.4, 8.5, 3.8, 9.4)
-			),
-			ModBlocks.GOLD_BACKPACK.get(), new RotatedShapes(
-					Block.box(3, 0, 6.5, 7, 6, 9.5),
-					Block.box(4.5, 3.8, 8.9, 5.5, 4.8, 9.9),
-					Block.box(10.5, 3.8, 8.9, 11.5, 4.8, 9.9),
-					Block.box(9, 0, 6.5, 13, 6, 9.5)
 			),
 			ModBlocks.DIAMOND_BACKPACK.get(), new RotatedShapes(
 					Block.box(4, 0, 5, 12, 6, 10),
